<resources>
    <string name="app_name">TapHoaApp</string>
    <string name="qu_n_m_t_kh_u"><u>Quên mật khẩu</u></string>
    <string name="default_web" translatable="false">449637111-c5rggm9311998bkf9ase3qma6onurl1n.apps.googleusercontent.com</string>
    <string name="facebook_app_id" translatable="false">953606525358146</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1234</string>
    <string name="facebook_client_token" translatable="false">ae598cd9a4afce2a695f82645c414531</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="clothes">Clothes</string>
    <string name="Office">Offices</string>
    <string name="Electron">Electrons</string>
    <string name="books">Books</string>

    <string name="Home">Home</string>
    <string name="Profile">Profile</string>
    <string name="Basket">Basket</string>
    <string name="BuyNow">BuyNow</string>
    <string name="checkout">Đặt hàng</string>

    <string name="Adress">Địa chỉ</string>
    <string name="Phone">Điện thoại</string>
    <string name="Total">Thanh toán</string>
    <string name="Name">HọTên</string>
    <string name="TransFee">Phí vận chuyển</string>

    <string name="City">Quận/ThànhPhố</string>

    <string name="Shipment">Shipment</string>
    <string name="Setting">Setting</string>

    <string name="deliver_yes">nhận hàng tại cửa hàng</string>
    <string name="h_v_t_n">Họ và tên</string>
    <string name="email">Email</string>
    <string name="tu_i">Tuổi</string>
    <string name="s_i_n_tho_i">Số điện thoại</string>
    <!-- <string name="default_web_client_id">449637111-c5rggm9311998bkf9ase3qma6onurl1n.apps.googleusercontent.com</string> -->
    <!--    <string name="title_activity_search">SearchActivity</string>-->
    <!--    &lt;!&ndash; Strings used for fragments for navigation &ndash;&gt;-->
    <!--    <string name="first_fragment_label">First Fragment</string>-->
    <!--    <string name="second_fragment_label">Second Fragment</string>-->
    <!--    <string name="next">Next</string>-->
    <!--    <string name="previous">Previous</string>-->

    <!--    <string name="hello_first_fragment">Hello first fragment</string>-->
    <!--    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>-->
    <!--    <string name="title_activity_example_nav_draw">example_nav_draw</string>-->
    <!--    <string name="navigation_drawer_open">Open navigation drawer</string>-->
    <!--    <string name="navigation_drawer_close">Close navigation drawer</string>-->
    <!--    <string name="nav_header_title">Android Studio</string>-->
    <!--    <string name="nav_header_subtitle">android.studio@android.com</string>-->
    <!--    <string name="nav_header_desc">Navigation header</string>-->
    <!--    <string name="action_settings">Settings</string>-->

    <!--    <string name="menu_home">Home</string>-->
    <!--    <string name="menu_gallery">Gallery</string>-->
    <!--    <string name="menu_slideshow">Slideshow</string>-->


</resources>